# resilience

./: .gitignore  .sops.yaml  CONTRIBUTING.md  README.md  mkdocs.yml  pixi.toml
.github/: CODEOWNERS
.github/workflows/: cd_support_sphere_py.yml  ci_support_sphere_flutter.yml  run-dev-server.yml  web-main.yaml  webpreview.yaml
deployment/: README.md  values.cloud.yaml  values.dev.yaml
deployment/cloud/: .terraform.lock.hcl  (+2 more)
docs/: index.md
scripts/: access-cloud-server.sh  backup-db.sh  backup-kube.sh  backup.sh  cloud-account-setup.py  restore-kube.sh  run-cloud-server.py
src/support_sphere_py/: pyproject.toml
src/support_sphere_py/src/support_sphere/: __init__.py
src/support_sphere_py/src/support_sphere/models/public/: __init__.py  cluster.py  group.py  group_member.py  household.py  local_message.py  message.py  people.py  point_of_interest.py
src/support_sphere_py/src/support_sphere/repositories/: __init__.py  base_repository.py
src/support_sphere_py/src/support_sphere/repositories/public/: people_repository.py
src/support_sphere_py/src/support_sphere/scripts/: __init__.py  execute_sql_statement.py  household_geo.py  shapes.py  update_db_sample_data.py
src/support_sphere_py/src/support_sphere/scripts/resources/data/: checklists.json  cluster_map.csv  households-geom.csv  households.csv  messages.csv  point_of_interests.csv  point_types.csv  resources.csv
src/support_sphere_py/src/tests/resources/scripts/: update_db_sample_data.py
src/support_sphere_py/tests/resources/scripts/: update_db_sample_data.py
supabase/: config.toml  seed.sql
(+530 files in other folders)
