[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

#[tool.hatch.version]
#source = "vcs"

#[tool.hatch.build.hooks.vcs]
#version-file = "src/support_sphere/version.py"
#
#[tool.hatch.version.raw-options]
#local_scheme = "no-local-version"

[project]
name = "support-sphere-py"
version = "0.0.20"
description = "Package for support sphere api service"
readme = "README.md"
requires-python = ">=3.12"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: BSD License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering",
    "Topic :: Software Development :: Build Tools",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "sqlmodel",
    "supabase",
    "psycopg2-binary",
    "fastapi[standard]",
    "uvicorn",
    "geoalchemy2",
    "typer",
    "python-dotenv>=1.1.1",
    "lxml>=6.0.1",
    "shapely>=2.1.1",
    "geopy>=2.4.1",
]

[project.license]
file = "LICENSE"

[tool.hatch.build.targets.sdist]
exclude = ["/tests"]

[tool.hatch.build.targets.wheel]
packages = ["src/support_sphere"]

[project.scripts]
support_sphere = "support_sphere.scripts.cli_app:app"
